--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,19 @@ body {
   margin: 120px auto;
   max-width: 600px;
 }
+header {
+  margin-bottom: 30px;
+}
 h1 {
+  text-align: center;
   font-weight: 900;
   font-size: 36px;
   line-height: 1.5;
   color: #38598b;
+}
+form {
+  padding: 30px;
+  background-color: white;
+  border-radius: 10px;
+  display: flex;
 }
