--- a/src/style.css
+++ b/src/style.css
@@ -18,8 +18,10 @@ h1 {
 form {
   padding: 30px;
   background-color: white;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
   border-radius: 10px;
   display: flex;
+  margin-bottom: 30px;
 }
 .instructions {
   padding: 16px;
@@ -28,4 +30,14 @@ form {
   font-size: 16px;
   border-radius: 50px;
   line-height: 20px;
+}
+.button {
+  margin-left: 10px;
+  background-color: #38598b;
+  color: white;
+  border: none;
+  width: 150px;
+  font-size: 16px;
+  border-radius: 50px;
+  padding: 14px 24px;
 }
