adding classes and styling to poem elements

--- a/src/style.css
+++ b/src/style.css
@@ -41,3 +41,11 @@ form {
   border-radius: 50px;
   padding: 14px 24px;
 }
+.poem {
+  font-size: 16px;
+  background-color: white;
+  padding: 30px;
+  line-height: 2;
+  border-left: 3px solid #38598b;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+}
