--- a/src/style.css
+++ b/src/style.css
@@ -43,8 +43,9 @@ form {
 }
 .poem {
   font-size: 16px;
+  border-radius: 30px;
   background-color: white;
-  padding: 30px;
+  padding: 20px;
   line-height: 2;
   border-left: 3px solid #38598b;
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
