--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,9 @@
 body {
   background-color: #e7eaf6;
 }
+a {
+  color: #38598b;
+}
 .container {
   margin: 120px auto;
   max-width: 600px;
@@ -49,4 +52,9 @@ form {
   line-height: 2;
   border-left: 3px solid #38598b;
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+}
+footer {
+  text-align: center;
+  font-size: 13px;
+  margin-top: 30px;
 }
